# vigil-ai-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
app/: config.py  database.py  main.py
app/ai/: engine.py  heuristics.py  huggingface.py
app/api/: deps.py
app/api/v1/: analytics.py  audit.py  auth.py  cases.py  router.py  submissions.py  users.py  websocket.py
app/core/: exceptions.py  middleware.py  security.py
app/models/: __init__.py  audit_log.py  case.py  submission.py  user.py
app/schemas/: analytics.py  audit.py  case.py  submission.py  user.py
app/services/: cloudinary_service.py  media_fetch.py  storage_service.py
app/workers/: celery_app.py  tasks.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: backfill_cases.py  seed_db.py
tests/: conftest.py  test_auth.py  test_cases.py  test_engine_fallback.py  test_heuristics.py  test_submissions.py
